fix: Apply useStretch composable for field based comp.

--- a/src/components/datePicker/KwDatePicker.scss
+++ b/src/components/datePicker/KwDatePicker.scss
@@ -4,8 +4,8 @@
 }
 
 .kw-date-picker {
+  width: 250px;
   min-width: 140px;
-  max-width: 250px;
 }
 
 .kw-date-picker.kw-field.q-field {
